--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     background-color: white;
     padding: 40px;
-    box-shadow: 2px 2px 2px 2px rgb(39, 177, 39);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
 .container form input{
